# AliAir

./: .gitignore  README.md
Nvlinkp2pfailetest/: README.md
Nvlinkp2pfailetest/kernel/: CMakeLists.txt  nvlinktest.cu
Nvshmemhello/: complie.sh  simple_shift.cu
Ray/: test_Ray.py
docs/: APIused.md
